# vnx-addons

./: .gitmodules  CMakeLists.txt  README.md  codegen.sh  create_debian.sh  make_debug.sh  make_devel.sh
debian/: control
include/vnx/addons/: DeflateInputStream.h  DeflateOutputStream.h  FileServer.h  HttpBalancer.h  HttpClient.h  HttpInterface.h  HttpServer.h  MsgServer.h  TcpServer.h  zstd_utils.h
include/win32-compat/: poll.h
interface/: CompressedValue.vni  DeflatedValue.vni  HttpChunk.vni  HttpComponent.vni  HttpRequest.vni  HttpResponse.vni  HttpSession.vni  file_info_t.vni  http_request_options_t.vni  permission_e.vni
modules/: FileServer.vni  HttpBalancer.vni  HttpClient.vni  HttpServer.vni  MsgServer.vni  TcpServer.vni
src/: CompressedValue.cpp  DeflateInputStream.cpp  DeflateOutputStream.cpp  DeflatedValue.cpp  FileServer.cpp  HttpBalancer.cpp  HttpClient.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  MsgServer.cpp  TcpServer.cpp
src/linux/: HttpServer.cpp  TcpServer.cpp
src/win32/: HttpServer.cpp  TcpServer.cpp
test/: test_deflate.cpp  test_http_client.cpp  test_http_server.cpp  test_zstd.cpp
www/: index.html
